bracket fixed and spacing for heading

--- a/srcs/nginx/frontend/css/homePage.css
+++ b/srcs/nginx/frontend/css/homePage.css
@@ -1,19 +1,3 @@
-/* body {
-	background-color: #000;
-	margin: 0px;
-	overflow: hidden;
-}
-
-.hero {
-	background-image: url(../assets/hero.svg);
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	width: 100%;
-	height: 100vh;
-} */
-
-
 html {
 	height:100%;
   }
@@ -536,4 +520,18 @@ tbody {
 	background: #616161;
 	border: 12px solid transparent;
 	background-clip: content-box;
+}
+
+.intro-text {
+	font-family: 'Press Start 2P', cursive;
+	font-size: 4em;
+	margin: 0;
+	line-height: 1em;
+	animation: bounce 1s infinite alternate;
+}
+
+@keyframes bounce {
+	to {
+		transform: translateY(-10px);
+	}
 }
