--- a/srcs/nginx/frontend/css/login.css
+++ b/srcs/nginx/frontend/css/login.css
@@ -1,17 +1,3 @@
-/* body {
-	background-color: #000;
-	margin: 0px;
-}
-
-.hero{
-	background-image: url(../assets/hero.svg);
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	width: 100%;
-	height: 100vh;
-} */
-
 html {
 	height:100%;
   }
