--- a/srcs/nginx/frontend/css/tournament_styles.css
+++ b/srcs/nginx/frontend/css/tournament_styles.css
@@ -240,7 +240,7 @@ hr {
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-size: 3em;
-	margin-bottom:-40px;
+	margin-bottom:-30px;
 }
 
 .hero1 p.year {
